# chotu_web_app

./: .gitignore
backend/: backend_server.py
backend/teach_recordings/: Teach Recording 1.json
chotu_robot_info/rotatum_arm_description/: CMakeLists.txt  package.xml
chotu_robot_info/rotatum_arm_description/launch/: view_robot.launch.py
chotu_robot_info/rotatum_arm_description/rviz/: rotatum_arm.rviz
chotu_robot_info/rotatum_arm_description/xacro/: rotatum_arm.ros2_control.xacro  rotatum_arm.urdf  rotatum_arm.urdf.xacro  rotatum_arm.xacro
chotu_robot_info/rotatum_arm_hardware/: CMakeLists.txt  package.xml  rotatum_arm_hardware.xml
chotu_robot_info/rotatum_arm_hardware/include/rotatum_arm_hardware/: rotatum_arm_hardware_interface.hpp
chotu_robot_info/rotatum_arm_hardware/src/: rotatum_arm_hardware_interface.cpp
chotu_web_app_v1/: chotu_gui.html
frontend/: index.html  package-lock.json  package.json  script.js  style.css
frontend/js/: 3d_scene.js
